Add pale loading bar; fix Remote validation on server site with additional params

--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -10,6 +10,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <title>AdminLTE 2 | Starter</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <script src="~/Scripts/pace.min.js"></script>
+    <link href="~/Scripts/pace-theme.css" rel="stylesheet" />
     <!-- Bootstrap 3.3.5 -->
     @Styles.Render(Bundles.Css.Bootstrap)
     <!-- Font Awesome -->
