Add cdn urls in bundleConfig.cs

--- a/Blog/Views/AdminPanel/EditBlog.cshtml
+++ b/Blog/Views/AdminPanel/EditBlog.cshtml
@@ -65,9 +65,9 @@
     </div>
 </form>
 
-@Scripts.Render(Bundles.Js.JqueryVal)
+
 @Scripts.Render(Bundles.Js.AutoNgModel)
-<script>
+@*<script>
     //disable ignoring validation of id field
     $("#upload-form").validate().settings.ignore = ":hidden:not([id*=Id])";
-</script>
+</script>*@
