--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -332,6 +332,7 @@ desired effect
     <!-- REQUIRED JS SCRIPTS -->
     <!-- jQuery 2.1.4 -->
     @Scripts.Render(Bundles.Js.Jquery)
+    @Scripts.Render(Bundles.Js.JqueryVal)
     <!-- Bootstrap 3.3.5 -->
     @Scripts.Render(Bundles.Js.Bootstrap)
     <!-- AdminLTE App -->
