--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -10,6 +10,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <title>AdminLTE 2 | Starter</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+
+    <script data-pace-options='{ "ajax": false,"eventLag": false }' src="~/Scripts/pace.min.js"></script>
+    <link href="~/Scripts/pace-flash.css" rel="stylesheet" />
     <!-- Bootstrap 3.3.5 -->
     @Styles.Render(Bundles.Css.Bootstrap)
     <!-- Font Awesome -->
@@ -29,6 +32,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <base href="/AdminPanel/">
 </head>
 <!--
 BODY TAG OPTIONS:
@@ -87,7 +91,9 @@ desired effect
                                             <a href="#">
                                                 <div class="pull-left">
                                                     <!-- User Image -->
+@*
                                                     <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+*@
                                                 </div>
                                                 <!-- Message title and timestamp -->
                                                 <h4>
@@ -167,14 +173,18 @@ desired effect
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
+@*
                                 <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+*@
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span class="hidden-xs">Alexander Pierce</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
+@*
                                     <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+*@
                                     <p>
                                         Alexander Pierce - Web Developer
                                         <small>Member since Nov. 2012</small>
@@ -218,7 +228,9 @@ desired effect
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel">
                     <div class="pull-left image">
+@*
                         <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+*@
                     </div>
                     <div class="pull-left info">
                         <p>Alexander Pierce</p>
