--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -27,6 +27,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           apply the skin class to the body tag so the changes take effect.
     -->
     @Styles.Render(Bundles.Css.Skin)
+    @Styles.Render(Bundles.Css.AdminPanelCustom)
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -92,9 +93,9 @@ desired effect
                                             <a href="#">
                                                 <div class="pull-left">
                                                     <!-- User Image -->
-@*
-                                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-*@
+                                                    @*
+                                                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                                    *@
                                                 </div>
                                                 <!-- Message title and timestamp -->
                                                 <h4>
@@ -174,18 +175,18 @@ desired effect
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
-@*
-                                <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-*@
+                                @*
+                                    <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                                *@
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span class="hidden-xs">Alexander Pierce</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
-@*
-                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-*@
+                                    @*
+                                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                    *@
                                     <p>
                                         Alexander Pierce - Web Developer
                                         <small>Member since Nov. 2012</small>
@@ -229,9 +230,9 @@ desired effect
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel">
                     <div class="pull-left image">
-@*
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-*@
+                        @*
+                            <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        *@
                     </div>
                     <div class="pull-left info">
                         <p>Alexander Pierce</p>
@@ -267,9 +268,9 @@ desired effect
             <!-- /.sidebar -->
         </aside>
         <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-        <div ng-view></div>
-    </div><!-- /.content-wrapper -->
+        <div class="content-wrapper">
+            <div ng-view></div>
+        </div><!-- /.content-wrapper -->
         <!-- Main Footer -->
         <footer class="main-footer">
             <!-- To the right -->
@@ -343,7 +344,6 @@ desired effect
     <!-- REQUIRED JS SCRIPTS -->
     <!-- jQuery 2.1.4 -->
     @Scripts.Render(Bundles.Js.Jquery)
-    @Scripts.Render(Bundles.Js.JqueryVal)
     <!-- Bootstrap 3.3.5 -->
     @Scripts.Render(Bundles.Js.Bootstrap)
     <!-- AdminLTE App -->
@@ -356,9 +356,9 @@ desired effect
 
 
 
-<!-- Optionally, you can add Slimscroll and FastClick plugins.
-Both of these plugins are recommended to enhance the
-user experience. Slimscroll is required when using the
-fixed layout. -->
+    <!-- Optionally, you can add Slimscroll and FastClick plugins.
+    Both of these plugins are recommended to enhance the
+    user experience. Slimscroll is required when using the
+    fixed layout. -->
 </body>
 </html>
