Add post edit page

--- a/Blog/Scripts/pace-theme.css
+++ b/Blog/Scripts/pace-theme.css
@@ -11,13 +11,13 @@
 }
 
 .pace .pace-progress {
-  background: #e61a38;
+  background: white;
   position: fixed;
   z-index: 2000;
   top: 0;
   right: 100%;
   width: 100%;
-  height: 2px;
+  height: 3px;
 }
 
 .pace .pace-progress-inner {
@@ -26,7 +26,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #e61a38, 0 0 5px #e61a38;
+  box-shadow: 0 0 10px white, 0 0 5px white;
   opacity: 1.0;
   -webkit-transform: rotate(3deg) translate(0px, -4px);
   -moz-transform: rotate(3deg) translate(0px, -4px);
@@ -40,12 +40,12 @@
   position: fixed;
   z-index: 2000;
   top: 15px;
-  right: 15px;
+  right: 50%;
   width: 14px;
   height: 14px;
   border: solid 2px transparent;
-  border-top-color: #e61a38;
-  border-left-color: #e61a38;
+  border-top-color: white;
+  border-left-color: white;
   border-radius: 10px;
   -webkit-animation: pace-spinner 400ms linear infinite;
   -moz-animation: pace-spinner 400ms linear infinite;
