--- a/Blog/Views/NgPartials/EditBlog.cshtml
+++ b/Blog/Views/NgPartials/EditBlog.cshtml
@@ -59,7 +59,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="button" ng-click="submit()" value="Save" class="btn btn-default"/>
+                <input id="submit" type="button" ng-disabled="loading" ng-click="submit()" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
