--- a/Blog/Views/NgPartials/PostAdd.cshtml
+++ b/Blog/Views/NgPartials/PostAdd.cshtml
@@ -30,8 +30,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CategoryId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+                <select ng-model="model.CategoryId" ng-options="cat.Id as cat.Name for cat in categories"></select>
+                @Html.EditorFor(model => model.CategoryId, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.CategoryId, "", new {@class = "text-danger"})
             </div>
         </div>
 
