--- a/Blog/Views/NgPartials/PostAdd.cshtml
+++ b/Blog/Views/NgPartials/PostAdd.cshtml
@@ -22,36 +22,50 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Content, new {htmlAttributes = new {@class = "form-control"}})
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <select ng-model="model.CategoryId" ng-options="cat.Id as cat.Name for cat in categories"></select>
-                @Html.EditorFor(model => model.CategoryId, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.DropDownListFor(model => model.CategoryId, new SelectList(new List<string>()), "Select category...", new
+                {
+                    @class = "form-control", ng_options="cat.Id as cat.Name for cat in categories"
+                })
                 @Html.ValidationMessageFor(model => model.CategoryId, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Published, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.CheckBoxFor(model => model.Published, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.ValidationMessageFor(model => model.Published, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="button" ng-disabled="loading" ng-click="submit()" value="Create" class="btn btn-default" />
+                <input id="submit" type="button" ng-disabled="loading" ng-click="submit()" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
 
 
-    <link href="~/Content/tinyeditor.css" rel="stylesheet" />
-    @Scripts.Render(Bundles.Js.JqueryVal)
-    @Scripts.Render(Bundles.Js.AutoNgModel)
-    <script src="~/Scripts/packed.js"></script>
-    <script src="~/Scripts/tinyeditor.js"></script>
+<link href="~/Content/tinyeditor.css" rel="stylesheet" />
+@Scripts.Render(Bundles.Js.JqueryVal)
+@Scripts.Render(Bundles.Js.AutoNgModel)
+<script src="~/Scripts/packed.js"></script>
+<script src="~/Scripts/tinyeditor.js"></script>
 
-    <script type="text/javascript">
+<script>
+    //Enable validation of hidden Content field
+    $("#upload-form").validate().settings.ignore = ":hidden:not([id*=Content])";
+</script>
+<script type="text/javascript">
         var editor = new TINY.editor.edit('editor', {
             id: 'Content',
             width: 584,
@@ -74,5 +88,8 @@
             resize: { cssclass: 'resize' }
         });
 
-        $(document).ready(function () { $("#submit").click(function () { editor.post(); }); });
+        $(document).ready(function () { $("#submit").click(function() {
+            editor.post();
+            $('#Content').trigger('input');
+        }); });
     </script>
