--- a/Blog/Views/Blog/Create.cshtml
+++ b/Blog/Views/Blog/Create.cshtml
@@ -39,10 +39,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BlogCategoryId, "Category", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CategoryId, "Category", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.BlogCategoryId,(SelectList)ViewBag.BlogCategoryId,"Select category...", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.BlogCategoryId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.CategoryId,(SelectList)ViewBag.BlogCategoryId,"Select category...", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
             </div>
         </div>
 
