--- a/Blog/Views/Posts/Details.cshtml
+++ b/Blog/Views/Posts/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <h4>Post</h4>
-    <hr />
+    <hr/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Blog.Name)
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Content)
+            @Html.Raw(Model.Content)
         </dt>
 
         <dd>
@@ -51,6 +51,9 @@
         </dd>
 
     </dl>
+</div>
+<div>
+    @Html.Raw(Model.Content)
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
