--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -171,7 +171,7 @@ desired effect
                             </ul>
                         </li>
                         <!-- User Account Menu -->
-                        <li class="dropdown user user-menu">
+                        <li ng-controller="UserCtrl" class="dropdown user user-menu">
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
@@ -179,7 +179,7 @@ desired effect
                                     <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                                 *@
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                <span class="hidden-xs">Alexander Pierce</span>
+                                <span class="hidden-xs">{{user.Email}}</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
@@ -263,6 +263,12 @@ desired effect
                             <li><a href="Posts/Add">Add post</a></li>
                         </ul>
                     </li>
+                    <li class="treeview">
+                        <a href="#"><i class="fa fa-link"></i> <span>Appearance</span> <i class="fa fa-angle-left pull-right"></i></a>
+                        <ul class="treeview-menu">
+                            <li><a href="Appearance/Layout">Layout</a></li>
+                        </ul>
+                    </li>
                 </ul><!-- /.sidebar-menu -->
             </section>
             <!-- /.sidebar -->
@@ -340,10 +346,30 @@ desired effect
         <!-- Add the sidebar's background. This div must be placed
              immediately after the control sidebar -->
         <div class="control-sidebar-bg"></div>
-    </div><!-- ./wrapper -->
-    <!-- REQUIRED JS SCRIPTS -->
+</div><!-- ./wrapper -->
+
+    <!-- Error Modal -->
+    <div class="modal fade" id="errorModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" style="color: red;">Connection error</h4>
+                    
+                </div>
+                <div class="modal-body">
+                    <button type="button" onclick="location.reload();" class="btn btn-primary">Reload</button>
+                </div>
+                @*<div class="modal-footer">
+                   
+                </div>*@
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+<!-- REQUIRED JS SCRIPTS -->
     <!-- jQuery 2.1.4 -->
     @Scripts.Render(Bundles.Js.Jquery)
+    @Scripts.Render(Bundles.Js.JqueryUi)
     <!-- Bootstrap 3.3.5 -->
     @Scripts.Render(Bundles.Js.Bootstrap)
     <!-- AdminLTE App -->
@@ -351,6 +377,7 @@ desired effect
     @Scripts.Render(Bundles.Js.Angular)
     @Scripts.Render(Bundles.Js.AngularRoute)
     @Scripts.Render(Bundles.Js.AngularResource)
+    @Scripts.Render(Bundles.Js.AngularSortable)
 
     @Scripts.Render(Bundles.Js.AngularApp)
 
