--- a/Blog/Content/AdminPanel/Custom.css
+++ b/Blog/Content/AdminPanel/Custom.css
@@ -1,4 +1,66 @@
-﻿.content-wrapper {
+﻿/*
+.content-wrapper {
     padding-top: 1px;
     padding-left: 20px;
 }
+*/
+
+
+/* LAYOUT SETTINGS*/
+
+.layoutsettings .apps-container {
+  border: 1px solid #acacac;
+    -webkit-border-radius: 6px;
+-moz-border-radius: 6px;
+border-radius: 6px;
+  margin: 10px 10px 0 0;
+  padding: 5px;
+  min-width:200px;
+  min-height:50px;
+}
+
+.layoutsettings .app {
+	width: 170px;
+	padding: 5px 10px;
+	margin: 5px 0;
+	border: 1px solid #8b8b8b;
+	border-radius: 5px;
+	background-color: #d4d4d4;
+
+	font-size: 1.1em;
+	font-weight: bold;
+	text-align: center;
+	cursor: move;
+}
+
+
+
+.layoutsettings h2 {
+	text-align: center;
+}
+
+.layoutsettings .floatleft {
+  float: left;
+}
+
+/* File input */
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
