--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -59,13 +59,13 @@ desired effect
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
         <!-- Main Header -->
-        <header class="main-header">
+        <header ng-controller="UserCtrl" class="main-header">
             <!-- Logo -->
-            <a href="index2.html" class="logo">
+            <a href="/" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>A</b>LT</span>
+                <span class="logo-mini"><b>BS</b></span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>Admin</b>LTE</span>
+                <span class="logo-lg"><b>BlogSite</b></span>
             </a>
             <!-- Header Navbar -->
             <nav class="navbar navbar-static-top" role="navigation">
@@ -77,6 +77,7 @@ desired effect
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
                         <!-- Messages: style can be found in dropdown.less-->
+                        <li style="background-color:rgb(30, 120, 173);">@Html.ActionLink("View Blog","ActiveBlog","Blogs",null,new {target="_blank"})</li>
                         <li class="dropdown messages-menu">
                             <!-- Menu toggle button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -94,7 +95,7 @@ desired effect
                                                 <div class="pull-left">
                                                     <!-- User Image -->
                                                     @*
-                                                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                                     *@
                                                 </div>
                                                 <!-- Message title and timestamp -->
@@ -171,12 +172,12 @@ desired effect
                             </ul>
                         </li>
                         <!-- User Account Menu -->
-                        <li ng-controller="UserCtrl" class="dropdown user user-menu">
+                        <li class="dropdown user user-menu">
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
                                 @*
-                                    <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                                <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                                 *@
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span class="hidden-xs">{{user.Email}}</span>
@@ -185,7 +186,7 @@ desired effect
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
                                     @*
-                                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                     *@
                                     <p>
                                         Alexander Pierce - Web Developer
@@ -267,6 +268,7 @@ desired effect
                         <a href="#"><i class="fa fa-link"></i> <span>Appearance</span> <i class="fa fa-angle-left pull-right"></i></a>
                         <ul class="treeview-menu">
                             <li><a href="Appearance/Layout">Layout</a></li>
+                            <li><a href="Appearance/Header">Header</a></li>
                         </ul>
                     </li>
                 </ul><!-- /.sidebar-menu -->
