--- a/Blog/Views/Blog/Default/Default.cshtml
+++ b/Blog/Views/Blog/Default/Default.cshtml
@@ -106,7 +106,7 @@ Call To Action Section Start
             <div class="col-md-12">
                 <div class="block">
                     <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="300ms">
-                        SO WHAT YOU THINK ?</h2>
+                        Visits: @Model.Blog.Visits, SO WHAT YOU THINK ?</h2>
                         <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="300ms"><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,</br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
                         <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="300ms">Contact With Me</a>
                 </div>
