--- a/Blog/Views/Blog2/Details.cshtml
+++ b/Blog/Views/Blog2/Details.cshtml
@@ -51,11 +51,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            @Html.DisplayNameFor(model => model.MiniatureUrl)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ImageUrl)
+            @Html.DisplayFor(model => model.MiniatureUrl)
         </dd>
 
     </dl>
