--- a/Blog/Views/NgPartials/EditHeader.cshtml
+++ b/Blog/Views/NgPartials/EditHeader.cshtml
@@ -10,21 +10,21 @@
 
 @*<div class="form-horizontal">
 
-    <label for="exampleInputFile">File input</label>
-    <div class="form-group">
-        <div class="input-group col-md-5">
-            <span class=" input-group-addon btn btn-default btn-file">
-                Browse <input id="imageInput" type="file" accept='image/*'>
-            </span>
-            <input readonly="readonly" id="imageUrl" class="form-control" type="text">
+        <label for="exampleInputFile">File input</label>
+        <div class="form-group">
+            <div class="input-group col-md-5">
+                <span class=" input-group-addon btn btn-default btn-file">
+                    Browse <input id="imageInput" type="file" accept='image/*'>
+                </span>
+                <input readonly="readonly" id="MiniatureUrl" class="form-control" type="text">
+            </div>
         </div>
-    </div>
 
-    <div class="image-cropper form-group col-md-8  ">
-        <img id="image" class="image" style="width: 100%; height: 100%;"/>
-    </div>
-    <textarea>dfghd</textarea>
-</div>*@
+        <div class="image-cropper form-group col-md-8  ">
+            <img id="image" class="image" style="width: 100%; height: 100%;"/>
+        </div>
+        <textarea>dfghd</textarea>
+    </div>*@
 <section class="content">
         <div class="box box-primary">
             <form>
