--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                 <!-- /responsive nav button -->
                 <!-- logo -->
                 <div class="navbar-brand" style="padding: 0;">
-                    <a href="index.html" style="margin-top: 0;">
+                    <a href="/" style="margin-top: 0;">
                         <img src="~/images/logo.png" alt="">
                     </a>
                 </div>
@@ -59,34 +59,6 @@
             <nav class="collapse navbar-collapse navbar-right" role="navigation">
                 <div class="main-menu">
                     @Html.Partial("_LoginPartial")
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="index.html">Home</a>
-                        </li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="service.html">Service</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
-                            <div class="dropdown-menu">
-                                <ul>
-                                    <li><a href="404.html">404 Page</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
-                            <div class="dropdown-menu">
-                                <ul>
-                                    <li><a href="blog-fullwidth.html">Blog Full</a></li>
-                                    <li><a href="blog-left-sidebar.html">Blog Left sidebar</a></li>
-                                    <li><a href="blog-right-sidebar.html">Blog Right sidebar</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-
                 </div>
             </nav>
             <!-- /main nav -->
@@ -102,18 +74,17 @@
     <footer id="footer">
         <div class="container">
             <div class="col-md-8">
-                <p class="copyright">Copyright: <span>2015</span> . Design and Developed by <a href="http://www.Themefisher.com">Themefisher</a></p>
             </div>
             <div class="col-md-4">
                 <!-- Social Media -->
                 <ul class="social">
                     <li>
-                        <a href="http://wwww.fb.com/themefisher" class="Facebook">
+                        <a href="#" class="Facebook">
                             <i class="ion-social-facebook"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://wwww.twitter.com/themefisher" class="Twitter">
+                        <a href="#" class="Twitter">
                             <i class="ion-social-twitter"></i>
                         </a>
                     </li>
@@ -123,7 +94,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://wwww.fb.com/themefisher" class="Google Plus">
+                        <a href="#" class="Google Plus">
                             <i class="ion-social-googleplus"></i>
                         </a>
                     </li>
