--- a/Blog/Views/Shared/_LoginPartial.cshtml
+++ b/Blog/Views/Shared/_LoginPartial.cshtml
@@ -5,18 +5,19 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
+            <li>@Html.ActionLink("Create blog","Create","Blog")</li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background: #7caafd; color: white;padding: 11px;margin: 4px;">@User.Identity.GetUserName() <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background: #7caafd; color: white; padding: 11px; margin: 4px;">@User.Identity.GetUserName() <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <ul>
                         <li>
-                            @Html.ActionLink("Manage", "Index", "AdminPanel", routeValues: null, htmlAttributes: new { title = "Manage"})
+                            @Html.ActionLink("Manage", "Index", "AdminPanel", routeValues: null, htmlAttributes: new {title = "Manage"})
                         </li>
                         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
                     </ul>
                 </div>
             </li>
-            
+
         </ul>
     }
 }
