--- a/Blog/Views/Blog/Default/Widgets/_CategoriesWidget.cshtml
+++ b/Blog/Views/Blog/Default/Widgets/_CategoriesWidget.cshtml
@@ -6,7 +6,7 @@
         @foreach (var cat in Model)
         {
             <li>
-                <a href="">@cat.Name</a> <span class="badge">1</span>
+            <a href="/Blog/@ViewBag.BlogUrl/category/@cat.UrlSlug">@cat.Name</a> <span class="badge">1</span>
             </li>
         }
     </ul>
