Implement Dashboard view

--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -128,14 +128,14 @@ desired effect
             </nav>
         </header>
         <!-- Left side column. contains the logo and sidebar -->
-        <aside class="main-sidebar">
+        <aside ng-controller="MenuCtrl" class="main-sidebar">
             <!-- sidebar: style can be found in sidebar.less -->
             <section class="sidebar">
                 <!-- Sidebar Menu -->
                 <ul class="sidebar-menu">
                     <li class="header">HEADER</li>
                     <!-- Optionally, you can add icons to the links -->
-                    <li class="active"><a href="BlogSettings/1"><i class="fa fa-link"></i> <span>Blog Settings</span></a></li>
+                    <li><a href="BlogSettings/1"><i class="fa fa-link"></i> <span>Blog Settings</span></a></li>
                     <li><a href="Dashboard"><i class="fa fa-link"></i> <span>Dashboard</span></a></li>
                     <li class="treeview">
                         <a href="#"><i class="fa fa-link"></i> <span>Posts</span> <i class="fa fa-angle-left pull-right"></i></a>
@@ -202,6 +202,24 @@ desired effect
     @Scripts.Render(Bundles.Js.AngularSortable)
 
     @Scripts.Render(Bundles.Js.AngularApp)
+
+@*<script>
+    
+    var setActive = function () {
+        var url = window.location.pathname.replace("/AdminPanel/", "");
+        $(".sidebar-menu a").each(function(e) {
+            if ($(this).attr("href") === url) {
+                $(this).parent().addClass("active");
+            } else {
+                $(this).parent().removeClass("active");
+            }
+        });
+    };
+    window.onhashchange = function () {
+        var a = 4;
+    }
+    setActive();
+</script>*@
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
     Both of these plugins are recommended to enhance the
