--- a/Blog/Views/NgPartials/Dashboard.cshtml
+++ b/Blog/Views/NgPartials/Dashboard.cshtml
@@ -3,9 +3,37 @@
     ViewBag.Title = "Blogs";
 }
 
-<h2>Blogs</h2>
+<section class="content-header">
+    <h1>
+        Dashboard
+    </h1>
+</section>
 
-<h2>Selected blog</h2>
-<select ng-model="selectedBlog">
-    <option ng-repeat="blog in blogs" value="{{blog.Id}}">{{blog.Name}}</option>
-</select>
+
+
+<section class="content">
+    <div class="box box-primary">
+        <form>
+            <div class="box-body ">
+                <div class="col-md-6 ">
+                    <div class="form-group" ng-hide="status == null">
+                        <div id="statusBox" ng-class="status.clas" class="alert " role="alert">{{status.msg}}</div>
+                    </div>
+                    <h4>Current blog</h4>
+                    <div class="row">
+                        <div class="form-group col-md-4">
+
+                            <select class="form-control" ng-options="blog.Id as blog.Name for blog in blogs" ng-model="selected" ></select>
+                        </div>
+                        <div class="form-group col-md-2">
+                            <input id="submit" type="button" ng-disabled="loading" ng-click="submit()" value="Change blog" class="btn btn-default"/>
+                        </div>
+                    </div>
+                    <h3 class="box-title">{{model.Name}} blog statistics</h3>
+                    <h4>Visits: {{model.Visits}}</h4>
+                    <h4>Posts: {{model.TotalPosts}}</h4>
+                </div>
+            </div>
+        </form>
+    </div>
+</section>
